- version number bump - CSS fix on offset svgs - adjusted dashboard on mobile

--- a/src/_assets/nat/css/common/_base.scss
+++ b/src/_assets/nat/css/common/_base.scss
@@ -287,10 +287,18 @@ svg.ripple {
 Layout
 ========================================================================== */
 #main {
+    display: flex;
+    height: calc(100vh - 100px);
+
     .col {
         @include desktop {
             @include transition( all, 0.5s, $easeOutExpo );
         }
+    }
+
+    .container {
+        height: auto;
+        margin: auto;
     }
 }
 
